2013-05-26  Gabriel Dos Reis  <gdr@cse.tamu.edu>

	* algebra/boolean.spad.pamphlet (IndexedBits)[<]: Define in Spad.
	* interp/bits.lisp: Remove.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-utility.boot (makeFilename): Move from nlib.lisp.
	* interp/nlib.lisp (MAKE-FILENAME): Move to sys-utility.boot.
	Adjust callers.
	* boot/tokens.boot: Add new builtins: filePath, filePath?,
	filePathDirectory, filePathName, filePathString, filePathType,
	makeFilePath.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/nlib.lisp (ADDOPTIONS): Move to sys-utility.boot.
	* interp/sys-utility.boot (addCompilerOption): Rename from ADDOPTIONS.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/logic.spad.pamphlet: New file.
	* algebra/boolean.spad.pamphlet (Logic): Move there.
	(BooleanLogic): Likewise.
	(PropositionalLogic): Likewise.
	(PropositionalFormula): Likewise.
	(PropositionalFormulaFunctions1): Likewise.
	(PropositionalFormulaFunctions2): Likewise.
	(KleeneTrivalentLogic): Likewise.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/cycles.spad.pamphlet (CycleIndicators) [spol]: Rename
	from nniBump.  Fix thinko.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/cycles.spad.pamphlet (alternating): Accept non-negative input.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* utils/command.cc (print_usage): Document --verbose.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/indexedp.spad.pamphlet (IndexedDirectProductObject):
	Define Rep, do not use base-domain form.

2013-05-23  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/stream.spad.pamphlet (LazyStreamAggregate) [entries]:
	Define unconditionally, even it it does not make much sense in general.

2013-05-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-utility.boot (%Libstream): New.
